
Slick 8.x-2.0-dev, 2016-04-09
-----------------------------
- Fixed for broken core library grid Rows.

Slick 8.x-2.0-dev, 2016-04-08
-----------------------------
- Cleaned up thumbnails leftovers.

Slick 8.x-2.0-dev, 2016-04-06
-----------------------------
- Allowed modules to not use slick_image at module level.
- Refined form elements for thumbnails vs. thumb_captions selections to allow
  supporting VEF which has no captions but may have thumbnails.

Slick 8.x-2.0-dev, 2016-04-04
-----------------------------
- Fixed for overridables.
- Added support to turn images into CSS background images.

Slick 8.x-2.0-dev, 2016-04-03
-----------------------------
- Removed media iframe stuffs out of slick-image.html.twig, and moved to which
  they belong: slick_media.module. Be sure to clear cache.

Slick 8.x-2.0-dev, 2016-04-02
-----------------------------
- Removed noscript fallback, see:
  http://goo.gl/FQLFQ6
  https://goo.gl/f78pMl
- Removed theme_slick_media(), and merged it into theme_slick_image() to get
  along well with Blazy::buildAttributes(), and reduce complication with aspect
  ratio when IMG, IFRAME and lightbox/image link A tags are _all optional.
- Fixed for broken slick with Blazy, aspect ratio and hidden containers, e.g.:
  - Hidden Slick containers such as within hidden Ultimenu regions.
  - Blazy lazyload, not Slick own builtin lazyload.
  - Aspect ratio enabled.
  - Blazied images are large enough to render too late when Slick kicks in.
  - Blazied small images are not affected.

Slick 8.x-2.0-dev, 2016-03-30
-----------------------------
- A few cleanups, Blazy option at Slick UI, skins, composer.json, etc.

Slick 8.x-2.0-dev, 2016-03-28
-----------------------------
- #2693089: Add dependency on Blazy.
  Be sure to clear cache.
- Renamed visible_slides into visible_items to allow re-usable by Blazy.
- Changed thumbnail_hover option into thumbnail_effect to allow variant
  thumbnail stylings: hoverable, static grid.