@@ -1,0 +1,26 @@
+<?php
+
+/**
+ * @file
+ * Installation actions for Slick.
+ */
+
+/**
+ * Implements hook_requirements().
+ */
+function slick_requirements($phase) {
+  $requirements = [];
+
+  if ($phase == 'runtime') {
+    if (!is_file('libraries/slick/slick/slick.min.js')) {
+      $requirements['slick_library'] = [
+        'description' => t('The <a href=":url">Slick library</a> should be installed at <strong>/libraries/slick/slick/slick.min.js.</strong>', [':url' => 'https://github.com/kenwheeler/slick/']),
+        'severity' => REQUIREMENT_ERROR,
+        'value' => t('Not installed.'),
+        'title' => t('Slick library'),
+      ];
+    }
+  }
+
+  return $requirements;
+}
